[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wifiguard-auditor"
version = "0.1.0"
description = "Passive Wi-Fi security auditing CLI for Termux and Linux systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "WiFiGuard Auditor contributors" }
]
keywords = ["wifi", "security", "audit", "termux", "linux", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
  "Topic :: Security"
]
dependencies = [
  "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]

[project.scripts]
wifiguard = "wifiguard_auditor.cli:main"

[tool.setuptools]
packages = ["wifiguard_auditor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

